crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_outsidestmt_2.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": "Nop",
      "span": {
        "start": 20,
        "end": 21
      }
    },
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "Foo"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 32,
              "end": 35
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 22,
        "end": 36
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 36
  }
}
