crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_outsidestmtinvalid_1.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Int": 1
            },
            "span": {
              "start": 11,
              "end": 12
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 14
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Int": 2
            },
            "span": {
              "start": 19,
              "end": 20
            }
          }
        ]
      },
      "span": {
        "start": 14,
        "end": 22
      }
    },
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "A"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 32,
              "end": 33
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 22,
        "end": 34
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 34
  }
}
