crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_outsidestmtinvalid_3.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "A"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 16,
              "end": 18
            }
          },
          "body": {
            "Braced": []
          }
        }
      },
      "span": {
        "start": 6,
        "end": 20
      }
    },
    {
      "kind": {
        "Declare": [
          [
            [
              "ticks",
              {
                "kind": {
                  "Int": 1
                },
                "span": {
                  "start": 35,
                  "end": 36
                }
              }
            ]
          ],
          null
        ]
      },
      "span": {
        "start": 21,
        "end": 39
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "foo"
                },
                "span": {
                  "start": 39,
                  "end": 42
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 39,
            "end": 44
          }
        }
      },
      "span": {
        "start": 39,
        "end": 46
      }
    },
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "B"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 56,
              "end": 58
            }
          },
          "body": {
            "Braced": []
          }
        }
      },
      "span": {
        "start": 46,
        "end": 60
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 60
  }
}
