crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_trycatch_without_variable.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [],
          "catches": [
            {
              "types": [
                {
                  "parts": [
                    "Exception"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 23,
                    "end": 32
                  }
                }
              ],
              "var": null,
              "body": [],
              "span": {
                "start": 22,
                "end": 38
              }
            }
          ],
          "finally": null
        }
      },
      "span": {
        "start": 7,
        "end": 38
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 38
  }
}
